fix spacing and duplicate info on eighth widget

--- a/intranet/static/css/dashboard.widgets.css
+++ b/intranet/static/css/dashboard.widgets.css
@@ -247,7 +247,9 @@
 /* No Act Selected */
 
 .block-signup.no-activity-selected.today {
-    color: rgb(255, 72, 72); /* red */
+    color: rgb(72, 72, 72);
+    font-weight: bold;
+    /* color: rgb(255, 72, 72); red */
 }
 
 /* make sure "Not sponsoring an activity" always shows;
@@ -292,6 +294,10 @@ div.eighth-block.open-passes > div.block-header > .block-letter {
     margin-bottom: -4px;
 }
 
+.block-info.with-timeleft {
+    margin-bottom: 4px;
+}
+
 .eighth-block:last-child .block-info {
     margin-bottom: 4px;
 }
@@ -300,6 +306,7 @@ div.eighth-block.open-passes > div.block-header > .block-letter {
     font-size: 11px;
     margin-left: 28px;
     white-space: nowrap;
+    margin-top: -4px;
 }
 
 
