--- a/intranet/static/css/responsive.css
+++ b/intranet/static/css/responsive.css
@@ -258,8 +258,11 @@
 
     /* increase padding on activity list */
     .eighth-signup #activity-list li {
-        padding-top: 3px;
-        padding-bottom: 3px;
+        padding: 3px;
+    }
+
+    .eighth-signup #activity-list .activity-ids {
+        display: none;
     }
 }
 
